api test rewrite